2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	From Danilo Godec <danci@agenda.si>:
	* stage2/pc_slice.h (PC_SLICE_TYPE_LINUX_RAID): New macro.
	* stage2/fsys_ext2fs.c (ext2fs_mount): Add a check for
	PC_SLICE_LINUX_RAID.
	
2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	From Bernhard Treutwein
	<Bernhard.Treutwein@Verwaltung.Uni-Muenchen.DE>:
	* docs/grub-new.texi (DOS/Windows): Made more readable.
	
2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi: Start reorganizing Multiboot
	Specification.
	
2001-01-15  OKUJI Yoshinori  <okuji@gnu.org>

	From Thierry Laronde <thierry.laronde@polynum.com>:
	* docs/user-ref.texi (Command-line and menu commands): Update
	the description about setkey.
	* stage2/builtins.c (setkey_func): When checking if TO_KEY and
	FROM_KEY are specified, see *TO_KEY and *FROM_KEY instead of
	TO_KEY and FROM_KEY, respectively.
	
2001-01-13  OKUJI Yoshinori  <okuji@gnu.org>

	From Thierry Laronde <thierry.laronde@polynum.com>:
	* util/grub-md5-crypt.in (prefix): New variable.
	(exec_prefix): Likewise.
	(sbindir): Likewise.
	
2001-01-12  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.h [__ELF__] (MULTIBOOT_HEADER_FLAGS): Defined
	as 0x00000003 instead of 0x00010003.
	* docs/boot.S (multiboot_header) [__ELF__]: Don't define a.out
	kludge information.
	
	* docs/Makefile.am (EXTRA_PROGRAMS): New variable.
	[BUILD_EXAMPLE_KERNEL] (noinst_DATA): Removed.
	[BUILD_EXAMPLE_KERNEL] (noinst_PROGRAMS): Changed to kernel.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_SOURCES): Renamed to ...
	[BUILD_EXAMPLE_KERNEL] (kernel_SOURCES): ... this.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_CFLAGS): Renamed to ...
	[BUILD_EXAMPLE_KERNEL] (kernel_CFLAGS): ... this.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_LDFLAGS): Renamed to ...
	[BUILD_EXAMPLE_KERNEL] (kernel_LDFLAGS): ... this.
	[BUILD_EXAMPLE_KERNEL] (kernel): Removed.
	[BUILD_EXAMPLE_KERNEL] (boot.o): New dependency.
	(CLEANFILES): New variable.
	
2001-01-11  OKUJI Yoshinori  <okuji@gnu.org>
